cmake_minimum_required(VERSION 3.13)

project(redis-starter-cpp)

file(GLOB_RECURSE SOURCE_FILES src/*.cpp)
include_directories(
        ${PROJECT_SOURCE_DIR}/include
)


set(CMAKE_CXX_STANDARD 23) # Enable the C++23 standard
set(THREADS_PREFER_PTHREAD_FLAG ON)

find_package(Threads REQUIRED)
# find_package(asio CONFIG REQUIRED)

add_executable(main ${SOURCE_FILES} src/main.cpp
        src/Server.cpp
        include/Server.h)

# target_link_libraries(server PRIVATE asio asio::asio)
target_link_libraries(main PRIVATE Threads::Threads)